# VAMcore

./: .env  .gitignore  .ninja_deps  .npmignore  00-GENERATE-SSTcore-Functions.py  00-SST_Library_Reference.md  CMakeLists.txt  INSTALL_INSTRUCTIONS.md  LICENSE  MANIFEST.in  PUBLISHING.md  PYPI_CHECKLIST.md  README_sstbindings.txt  README_vambindings.txt  RELEASE_NOTES_0.1.2.md  RELEASE_NOTES_0.1.3.md  Readme.md  SOLUTION_SUMMARY.md  SSTcore_Dashboard.spec  __init__.py  binding.gyp  build_linux_wheels.sh  build_wheels_conda.bat  build_wheels_conda.py  build_wheels_local.py  check_modules.py  cmake_install.cmake  compile.bat  demo.js  empty.tex  freeze_from_requirements.py  index.d.ts  index.js  inspectVAMfunctions.py  install.bat  install.ps1  install_requirements.py  list_sycl_devices.cpp  main_sycl.cpp  package-lock.json  (+35 more)
Generate_Audio_Voiceovers/: audio_prep.py  list_devices.cpp  run_hardware.bat  run_xpu.bat  verify_sst_hardware.py  xpu.py  xtts_long_synthesis.py  xtts_pipeline.py
SST_Dashboard/: SST_ATOM_MASS_INVARIANT_SEMF_patched.py  sst_dashboard_app.py  sst_fseries_utils.py  swirl_string_core.cp312-win_amd64.pyd  topological_relaxation.tex
Testing/: vambindings.cp312-win_amd64.pyd
bindings/: py_gravity_timefield.cpp  py_kinetic_energy.cpp  py_knot_dynamics.cpp  py_time_evolution.cpp  py_vam.cpp
cmake/: copy_pyd_fallback.cmake  embed_knot_files.cmake
docs/: 00-SST_Library_Reference.md  BUILDING_WHEELS.md  BUILD_NPM.md  BUILD_WHEELS_CONDA.md  COLAB_INSTALL.md  DOWNLOAD_INSTALL.md  Equations.md  LICENSE_NOTES.md  PUBLISHING.md  QUICK_START_PUBLISHING.md  README_NPM.md  README_sstbindings.txt  SETUP_GITHUB_ACTIONS.md  SETUP_NPM_PUBLISHING.md  UNIFIED_BUILD.md  UPLOAD_TO_PYPI.md  VERIFY_EMBEDDED_KNOTS.md  VERSION_MANAGEMENT.md  build_linux_wheels.sh  build_wheels_conda.ps1  build_wheels_conda.py  taxonomy_hvol_chirality.md  test_embedded_knots.py  vec_add.cpp
examples/: HelicityCalculation.py  SST_Library_Reference.md  VorticityExample.py  biot-savart_on_fseries.py  braid_generator.py  braid_search_engine.py  braid_search_log.txt  eval_ab_initio.py  example_ab_initio.py  example_biot_savart.py  example_compare_ideal_vs_fremlin_4_1.py  example_enstrophy_circulation.py  example_fetching_knots.py  example_fluid_rotation.py  example_fremlin_4_1_showcase.py  example_golden_nls.py  example_heavy_knot.py  example_ideal_knot_showcase.py  example_knot_visualization.py  example_magnus_integrator.py  example_particle_zoo_eval.py  example_potential_flow.py  example_radiation_flow.py  example_relative_vorticity.py  example_showcase_embedded_ideal_ab_by_id.py  example_sst_gravity.py  example_sst_integrator.py  example_vortex_ring.py  example_vorticity_transport.py  fourier_knot.example.py  fourier_knot_example_formula.tex  get_energy_rankine_core.py  hydrogen_spectrum_simulator.py  inspectSSTfunctions.py  inspectVAMfunctions.py  investigate_knots.py  investigate_no_knotinfo.py  knot_6_2.py  knot_pd_and_volume_example.py  knots-toggle-autoknot.py  (+23 more)
gui_tabs/: tab_ab_initio.py  tab_ab_initio_sweep.py  tab_hydrogen.py  tab_mass_sweep.py  tab_theory.py
include/: SST_Constants.h  SST_Master_Dictionary.h  vec3_utils.h
py_knots/: Knot_Taxonomy.tex  README.md  helicity2.py  knot.1_1.fseries  knot.5_1.fseries  knot.5_1u.fseries  knot.6_1.fseries  knot.6_2.fseries  knot.7_2d.fseries  knot.7_3d.fseries  knot.7_4.fseries  knot.7_7d.fseries  knot.8_1.fseries  knot.8_10s.fseries  knot.8_11.fseries  knot.8_11d.fseries  knot.8_13p.fseries  knot.8_14d.fseries  knot.8_15d.fseries  knot.8_19t.fseries  knot.8_19u.fseries  knot.8_1d.fseries  knot.8_20r.fseries  knot.8_21d.fseries  knot.8_3z.fseries  knot.8_4d.fseries  knot.8_5.fseries  knot.8_7s.fseries  knot.8_9d.fseries  knots-toggle-autoknot.py  knots.py
python_implementations/: fluid_dynamics.py
resources/: ideal_11n.txt  knot_meta_skeleton.csv  sstcore_taxonomy_knot.schema.json
scripts/: build_node_target.js  build_wasm.js  prebuild.js
src/: FourierKnot.cpp  FourierKnot.hpp  SST_Master_Dictionary.h  ab_initio_mass.cpp  ab_initio_mass.h  ab_initio_mass_py.cpp  biot_savart.cpp  biot_savart.h  biot_savart_py.cpp  field_kernels.cpp  field_kernels.h  field_kernels_py.cpp  field_ops_py.cpp  fluid_dynamics.cpp  fluid_dynamics.h  fluid_dynamics_py.cpp  fluid_rotation.cpp  fluid_rotation.h  fourier_knot.cpp  fourier_knot.h  frenet_helicity.cpp  frenet_helicity.h  frenet_helicity_py.cpp  gravity_timefield.cpp  gravity_timefield.h  heavy_knot.cpp  heavy_knot.h  hyperbolic_volume.cpp  hyperbolic_volume.h  hyperbolic_volume_py.cpp  kinetic_energy.cpp  kinetic_energy.h  knot_dynamics.cpp  knot_dynamics.h  knot_dynamics_py.cpp  knot_files_embedded.h  knot_pd.cpp  knot_pd.h  magnus_integrator.cpp  magnus_integrator.h  (+45 more)
src_bindings/: module_sst.cpp  module_sstbindings.cpp  module_vam.cpp  py_FourierKnot.cpp  py_biot_savart.cpp  py_field_kernels.cpp  py_field_ops.cpp  py_fluid_dynamics.cpp  py_fluid_rotation.cpp  py_fourier_knot.cpp  py_frenet_helicity.cpp  py_gravity_timefield.cpp  py_heavy_knot.cpp  py_hyperbolic_volume.cpp  py_kinetic_energy.cpp  py_knot.cpp  py_knot_dynamics.cpp  py_knot_pd.cpp  py_potential_flow.cpp  py_potential_timefield.cpp  py_pressure_field.cpp  py_radiation_flow.cpp  py_relative_vorticity.cpp  py_sst_gravity.cpp  py_swirl_field.cpp  py_thermo_dynamics.cpp  py_time_evolution.cpp  py_vortex_knot_system.cpp  py_vortex_ring.cpp  py_vorticity_dynamics.cpp  py_vorticity_transport.cpp
tests/: TestLibraryGravityModification.py  run_test.py  swirl_string_core.cp313-win_amd64.pyd  test_basic.js  test_bindings_basic.py  test_biot_savart.py  test_biot_savart_comprehensive.py  test_field_kernels_comprehensive.py  test_field_ops_comprehensive.py  test_fluid_dynamics_comprehensive.py  test_frenet_helicity.cpp  test_frenet_helicity.py  test_frenet_helicity_comprehensive.py  test_hyperbolic_volume_comprehensive.py  test_knot_comprehensive.py  test_knots_simple.py  test_potential_timefield.py  test_potential_timefield_comprehensive.py  test_radiation_flow_comprehensive.py  test_sst_gravity_comprehensive.py  test_sst_helicity_imports.py  (+7 more)
(+3267 files in other folders)
